[package]
name = "rust_demo"
version = "0.1.0"
authors = ["Alexander Drozdoff"]
edition = "2018"
license = "MIT"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package."grafix-toolbox"]
opt-level = 0

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
grafix-toolbox = { version = "*", features = ["profiling"] }
